--- a/lightning-board-v-001/src/components/Navbar/Navbar.css
+++ b/lightning-board-v-001/src/components/Navbar/Navbar.css
@@ -44,21 +44,14 @@
 .site-menu-mobile i{
     margin-right: 20px;
 }
-
-.site-menu ul {
-    list-style-type: none; /* disable dot*/
-    margin-top: 0;
-    margin-bottom: 0;
-    height: inherit;
-}
   
-.site-menu ul li {
+.site-menu div {
 float: left;
 width: 120px;
 height: inherit;
 }
 
-.site-menu ul li a {
+.site-menu div a {
 color: #333333;
 text-align: center;
 height: inherit;
@@ -68,7 +61,7 @@ justify-content: center;
 align-items: center;
 }
 
-.site-menu ul li a:hover:not(.active) {
+.site-menu div a:hover:not(.active) {
     color: #F4A442;
 }
 
