--- a/lightning-boards-v-001/src/components/SlideShow/SlideShow.css
+++ b/lightning-boards-v-001/src/components/SlideShow/SlideShow.css
@@ -1,7 +1,14 @@
 .slideshow-container{
     margin-left: auto;
     margin-right: auto;
-    /* display: block; */
+    display: block;
+}
+
+.sildeshow-border{
+    border: 3px solid #dddddd;
+    border-radius: 10px;
+    padding: 40px;
+    background-color: #ffffff;
 }
 
 .self-center{
@@ -14,7 +21,7 @@
 .prev, .next {
     cursor: pointer;
     position: absolute;
-    width: auto;
+    width: 25px;
     padding: 16px;
     color: white;
     font-weight: bold;
@@ -47,3 +54,18 @@
 
 @keyframes animateleft{from{left:-300px;opacity:0} to{left:0;opacity:1}}
 @keyframes animateright{from{right:-300px;opacity:0} to{right:0;opacity:1}}
+
+.dot {
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.dot-active, .dot:hover {
+    background-color: #717171;
+}
