--- a/lightning-boards-v-001/src/contents/Navbar/Navbar.css
+++ b/lightning-boards-v-001/src/contents/Navbar/Navbar.css
@@ -62,12 +62,14 @@ justify-content: center;
 align-items: center;
 }
 
-.site-menu div a:hover:not(.active) {
+.site-menu div a:hover {
     color: #F4A442;
 }
 
 .site-menu-content {
     margin-top: 50px;
     height: 300px;
-    background-color: khaki;
+    background-color: #ffffff;
+    border-top: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
 }
