--- a/lightning-boards-v-001/src/contents/Navbar/Navbar.css
+++ b/lightning-boards-v-001/src/contents/Navbar/Navbar.css
@@ -70,6 +70,6 @@ align-items: center;
     margin-top: 50px;
     height: 300px;
     background-color: #ffffff;
-    border-top: 1px solid #eeeeee;
+    border-top: 1px solid #888888;
     border-bottom: 1px solid #eeeeee;
 }
