update home content 1,2

--- a/lightning-boards-v-001/src/App.css
+++ b/lightning-boards-v-001/src/App.css
@@ -26,3 +26,9 @@ body {
     /* overflow-y: hidden; Hide vertical scrollbar */
     overflow-x: hidden; /* Hide horizontal scrollbar */
 }
+
+.justify-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
