--- a/lightning-boards-v-001/src/contents/Home/Home.css
+++ b/lightning-boards-v-001/src/contents/Home/Home.css
@@ -1,3 +1,8 @@
-.home{
+.home .content1{
     background-color: rgb(241, 241, 241);
+}
+
+.home .content2{
+    display: flex;
+    background-color: rgb(255, 255, 255);
 }
