--- a/lightning-boards-v-001/src/contents/Home/Home.css
+++ b/lightning-boards-v-001/src/contents/Home/Home.css
@@ -1,3 +1,7 @@
+.home {
+    overflow-x: hidden;
+}
+
 .home .content1{
     background-color: rgb(241, 241, 241);
 }
@@ -5,4 +9,14 @@
 .home .content2{
     display: flex;
     background-color: rgb(255, 255, 255);
+}
+
+.home-btn{
+    background-color: orange;
+    border: 0;
+    border-radius: 3px;
+    color: white;
+    width: 150px;
+    padding: 10px;
+    margin: 10px;
 }
