--- a/lightning-boards-v-001/src/contents/Navbar/Navbar.css
+++ b/lightning-boards-v-001/src/contents/Navbar/Navbar.css
@@ -13,6 +13,15 @@
     justify-content: center;
     align-items: center;
 }
+.site-logo a:link {
+    text-decoration: none;
+    color: inherit;
+}
+  
+.site-logo a:visited {
+    text-decoration: none;
+    color: inherit;
+}
 
 .site-logo i{
     margin-left: 20px;
